fix: staging changes - reduced h1 font size in base.scss - reduced padding under skills - made the scroll gradient invisible on small screens - made the logo absolute on small screens - increased main.scss top padding - made the profile and name sizes more respoonsive on smaller screens

--- a/src/styles/3-generic/_base.scss
+++ b/src/styles/3-generic/_base.scss
@@ -10,7 +10,7 @@ body {
 h1 {
     color: $color-lightgray;
     font-family: $primary-font-family;
-    font-size: 3.6em;
+    font-size: 3.4em;
     font-weight: $font-reg;
     letter-spacing: 7px;
 }
