--- a/src/styles/5-components/_c-skill-cat.scss
+++ b/src/styles/5-components/_c-skill-cat.scss
@@ -159,24 +159,27 @@
 }
 
 .c-skill-cat__pod-wrapper::before {
-    content: " ";
-    position: absolute;
-    height: 60px;
-    width: 100%;
-    left: 0;
-    bottom:0;
-    z-index: 1000;
-    $darker-navy : darken($color-navy, 2%);
-    background: rgba($color-navy, 0.5);
-    background: linear-gradient(to bottom, rgba($color-navy,0.4) 0%, rgba($darker-navy,1) 70%);
-    // transition: height ease-in 580ms;
+    display: none;
+    @include mq(1120px, null, 600px) {
+        content: " ";
+        display: inline-block;
+        position: absolute;
+        height: 55px;
+        width: 100%;
+        left: 0;
+        bottom:0;
+        z-index: 1000;
+        $darker-navy : darken($color-navy, 2%);
+        background: rgba($color-navy, 0.5);
+        background: linear-gradient(to bottom, rgba($color-navy,0.4) 0%, rgba($darker-navy,0.9) 80%);
+    }
 }
 
 
 
 .c-skill-cat__pod-item {
     @include wt(half);
-    padding: 0 10% sz(xxl);
+    padding: 0 10% sz(xl);
 
     @include mq(650px, null) {
         @include wt(third);
