--- a/src/styles/6-modules/_m-main.scss
+++ b/src/styles/6-modules/_m-main.scss
@@ -8,7 +8,7 @@
         margin: 0;
         @include wt(two-third);
         flex-grow: 1;
-        padding-top: sz(xl);
+        padding-top: 3.8em;
         
         //this is spacing for the side-nav
         padding-right: sz(xxx);
